<resources>
    <string name="app_name">MyIsamlicApplication</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_quran">القرآن الكريم</string>
    <string name="to">الى</string>
    <string name="aya_no">آية رقم</string>
    <string name="menu_azkar">أذكار</string>
    <string name="from_page">من صفحة</string>
    <string name="sora">سورة</string>
    <string name="jozz">جزء</string>
    <string name="page">صفحة</string>
    <string name="holy_quran">القرآن الكريم</string>
    <string name="quran_index">فهرس المصحف</string>
    <string name="quran_search">بحث في المصحف</string>
    <string name="azkar_list">قائمة الأذكار</string>
    <string name="azkar">الأذكار</string>
    <string name="menu_prayer_times">مواقيت الصلاة</string>
    <string name="prayer_times">مواقيت الصلاة</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about">About</string>
    <string name="about_app">This application was developed as an open source project \n\n source code can be found at https://github.com/eng-mohamedalmahdy/MyIsamlicApplication \n\n Quran pages downloaded from https://qurancomplex.gov.sa/en/techquran/dev/ \n\n prayer times calculated using https://aladhan.com/ API</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="fajr">Fajr</string>
    <string name="dhuhr">Dhuhr</string>
    <string name="asr">Asr</string>
    <string name="maghrib">Maghrib</string>
    <string name="isha">Isha</string>
</resources>