<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/quranIndexFragment"
            android:icon="@drawable/ic_quran"
            android:title="@string/menu_quran" />

        <item
            android:id="@+id/azkarHomeFragment"
            android:icon="@drawable/ic_star"
            android:title="@string/menu_azkar" />
        <item
            android:id="@+id/prayerTimesFragment"
            android:icon="@drawable/ic_prayer"
            android:title="@string/menu_prayer_times" />

        <item
            android:id="@+id/aboutFragment"
            android:icon="@drawable/ic_baseline_info_24"
            android:title="@string/about"
            />


    </group>
</menu>