<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Widget.MyIsamlicApplication.AppWidget.Container"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:theme="@style/Theme.MyIsamlicApplication.AppWidgetContainer">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight=".3"
            android:scaleType="fitCenter"
            android:src="@drawable/fajr" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/fajr"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/fajr"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight=".3"
            android:scaleType="fitCenter"
            android:src="@drawable/duhur" />

        <TextView
            android:layout_marginStart="8dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/dhuhr"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/dhuhr"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight=".3"
            android:scaleType="fitCenter"
            android:src="@drawable/asr" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/asr"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/asr"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight=".3"
            android:scaleType="fitCenter"
            android:src="@drawable/maghrib" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/maghrib"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/maghrib"
            android:layout_width="0dp"

            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight=".3"
            android:scaleType="fitCenter"
            android:src="@drawable/isha" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/isha"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/isha"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </LinearLayout>

</LinearLayout>